# tiny_mc

./: .clang-format  .gitignore  Makefile  README.md  cg_mc.c  meson.build  optimization_flags.cc  optimization_flags_iter.cc  optimization_flags_iter_clang.cc  optimization_flags_iter_gcc.cc  optimization_flags_iter_intel.cc  optimization_flags_wrapper.cc  optimization_flagst.sh  params.h  photon.c  photon.h  rand.c  run.sh  run_compiler.sh  run_critical.sh  run_fotones.sh  run_fotones_2.sh  run_fotones_3.sh  run_fotones_4.sh  run_fotones_big.sh  run_fotones_big1.sh  run_fotones_big22.sh  run_fotones_big3.sh  run_iter.sh  run_schedule.sh  run_server.sh  run_server_fotones.sh  run_server_fotones_big1.sh  run_server_fotones_big2.sh  run_server_fotones_big3.sh  run_server_schedule.sh  run_server_threads.sh  run_target.sh  run_test.sh  run_threads.sh  (+20 more)
Imagenes/: Laboratorio 1 Tiny MC.pptx
ispc/: params.h  tiny_mc.ispc  tiny_mc_ispc.h  tiny_mc_main.cpp  wtime.h
scripts/: run_block_size.sh  run_fotones.sh  run_fotones_1.sh  run_fotones_2.sh  run_fotones_3.sh  run_fotones_4.sh  run_fotones_5.sh  run_fotones_6.sh  run_fotones_7.sh  run_schedule.sh  run_server.sh  run_threads_1.sh  server_fotones_1.sh  server_fotones_3.sh  server_fotones_4.sh  server_schedule.sh  server_sleep.sh
